[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/images/projectile.png" type="Texture" id=1]
[ext_resource path="res://projectile.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/hit_ground_sound.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 1.0

[node name="Projectile" type="RigidBody2D" groups=[
"recordable",
]]
collision_layer = 8
continuous_cd = 1
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_rect = Rect2( 43, 58, 2, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HitGroundSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -12.0
bus = "Effects"

[connection signal="body_entered" from="." to="." method="_on_Projectile_body_entered"]
[connection signal="finished" from="HitGroundSound" to="." method="_on_HitGroundSound_finished"]
